# hybrid-casual-balancing

./: .gitignore  Cargo.toml  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mechanics/: attributes.json  items.json  quests.json
mechanics/enemies/: firefly.json  golem.json  trufo.json
mechanics/level-requirements/: skillLevelRequirement.json  weaponLevelRequirement.json
mechanics/player-mechanics/: playerLevelMechanics.json
mechanics/skills/damaging/: fireball.json  shockstream.json  swordSlam.json
mechanics/skills/non-damaging/: guardianAura.json  restorativeTouch.json
mechanics/weapons/common/: commonRustySword.json
py/map/: boundary.py  create_map.py
rust/: main.rs
rust/models/: attribute.rs  item.rs  map.rs  mod.rs  skill.rs  status_effect.rs  weapon.rs
rust/models/characters/: enemy.rs  mod.rs  player.rs
rust/models/game_mechanics/: mod.rs  range.rs  rewards.rs  stats.rs  targetting.rs
rust/utils/: mod.rs
rust/utils/map/: boundary.rs  coord_system.rs  coordinates.rs  load.rs  load_map.rs  locations.rs  mod.rs  position_handling.rs
src/map/: New_Map.glb  New_Map.mtl  invertedMapData.json  map.tmx  map.tsj  mapData.json  map_tileset.tsx
ts/configs/: sheets.ts
ts/models/: attribute.ts  enemy.ts  item.ts  items.ts  player.ts  purchase.ts  quest.ts  range.ts  resource.ts  skill.ts  stat.ts  statusEffect.ts  target.ts  upgrade.ts  upgradeCost.ts  weapon.ts
ts/utils/mechanics/: attribute.ts  player.ts  quest.ts  skill.ts  weapon.ts
ts/utils/mechanics/enemies/: enemy.ts  firefly.ts  golem.ts  trufo.ts
(+10 files in other folders)
