[package]
name = "hybrid-casual-balancing"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "hybrid-casual-balancing"
path = "rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.55", features=["session"]}
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0.183"
serde_json = "1.0.104"
dotenv = "0.15.0"